--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,13 @@ go.work.sum
 # env file
 .env
 
-# Editor/IDE
-# .idea/
-# .vscode/
+# Binaries
+/decode-gist
+/cmd/decode-gist/decode-gist
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
